stock api updated
